--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="title">
         <h1>SketchPad</h1>
       </div>
+      <div class="mode">Mode: Coloring</div>
       <div class="content">
         <div class="board"></div>
         <div class="buttons">
