Tweaked styles sheet

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
       <div class="content">
         <div class="board"></div>
         <div class="buttons">
-          <button onclick="changeColor('black')">Black</button>
-          <button onclick="changeColor('White')">Erasor</button>
-          <button onclick="changeColor('gray')">Gray</button>
-          <button onclick="changeColor('random')">Random</button>
+          <button class="bButton" onclick="changeColor('black')">Black</button>
+          <button class="eButton" onclick="changeColor('White')">Erasor</button>
+          <button class="gButton" onclick="changeColor('gray')">Gray</button>
+          <button class="rButton" onclick="changeColor('random')">
+            Random
+          </button>
           <button onclick="resetBoard()">Reset</button>
         </div>
         <div>
